--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="My own Blog about my differents experiences"/>
       <link href="https://fonts.googleapis.com/css2?family=Bilbo&family=Italiana&family=Parisienne&family=Lora:ital,wght@1,400;1,500&family=ABeeZee&family=Montserrat:wght@200&family=WindSong&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    
-    <title>DE Secre a Developer</title>
+    <title>De Secre a Developer Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
